ADD --- Se maqueta mas el app, con mejores estilos y se hacen pruebas de todo el consumo de apis, lo cual arroja un excelente resultado. Proyecto culminado

--- a/src/components/listTodoList/_titulo.scss
+++ b/src/components/listTodoList/_titulo.scss
@@ -25,3 +25,12 @@
         margin-top: 20px;
     }
   }
+
+  .imgtodolist{
+      width: 50%;
+      margin-left: 25%;
+      height: 250px;
+  }
+
+
+  
