--- a/src/components/listTodoList/listToListHijos/_listToList.scss
+++ b/src/components/listTodoList/listToListHijos/_listToList.scss
@@ -48,4 +48,8 @@ background-color: #87CEFA
     background-color: #F08080;
 margin-left: 10px;
 }
+.imgeditar{
+    height: 30px;
+    width: 30px;
+}
 
