--- a/src/components/todo/_todo.scss
+++ b/src/components/todo/_todo.scss
@@ -26,4 +26,11 @@
     
     
    
-
+.btntodocrear{
+    width: 30%;
+    margin-left: 35%;
+    margin-top: 20px;
+    border: 3px solid transparent;
+    border-radius: 10px;
+    background-color: #87CEFA;
+}
